# stobot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_alpine  Dockerfile_arm64v8  Dockerfile_arm64v8_alpine  README.md  docker-compose.yml  docker-compose.yml.template
.github/workflows/: docker-publish.yml  rust.yml
docker/alpine/: Dockerfile
docker/arm64/: Dockerfile
docker/bookworm/: Dockerfile
src/: handler.rs  lib.rs  main.rs  news.rs
test_data/: 20230511-1646.json  msg_str.txt
