[package]
name = "stobot"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
serde = "1.0.188"
serde-aux = "4.2.0"
serde_json = "1.0.107"

[dependencies.clap]
version = "4.4.6"
features = ["derive"]

#[dependencies.openssl]
#version = "0.10"
#features = ["vendored"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http"]

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt-multi-thread"]
