[package]
name = "stobot"
version = "0.6.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.11"
serde = "~1.0"
serde-aux = "~4.2"
serde_json = "~1.0"
async-std = "~1.12"
regex = "~1.10"

[dependencies.clap]
version = "~4.4"
features = ["derive"]

#[dependencies.openssl]
#version = "0.10"
#features = ["vendored"]

[dependencies.serenity]
version = "~0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "http"]

[dependencies.tokio]
version = "1.34.0"
features = ["macros", "rt-multi-thread"]
